--- a/huffman_mixed_tree.html
+++ b/huffman_mixed_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="fFwSfMeTSDjB" style="width:900px;height:500px;"></div>
+    <div class="item" id="PyMMJQICBYyY" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_fFwSfMeTSDjB = echarts.init(document.getElementById('fFwSfMeTSDjB'), "white");
-    let option_fFwSfMeTSDjB = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"4","value":4,"children":[{"name":"A:2","value":2},{"name":"2","value":2,"children":[{"name":"r:1","value":1},{"name":"C:1","value":1}]}]},{"name":"7","value":7,"children":[{"name":"a:3","value":3},{"name":"4","value":4,"children":[{"name":"2","value":2,"children":[{"name":"R:1","value":1},{"name":"D:1","value":1}]},{"name":"2","value":2,"children":[{"name":"b:1","value":1},{"name":"B:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_PyMMJQICBYyY = echarts.init(document.getElementById('PyMMJQICBYyY'), "white");
+    let option_PyMMJQICBYyY = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":5,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"19","value":19,"children":[{"name":"8","value":8,"children":[{"name":"a:3","value":3},{"name":"5","value":5,"children":[{"name":"2","value":2,"children":[{"name":"r:1","value":1},{"name":"C:1","value":1}]},{"name":"3","value":3,"children":[{"name":"D:1","value":1},{"name":"2","value":2,"children":[{"name":"B:1","value":1},{"name":"R:1","value":1}]}]}]}]},{"name":"11","value":11,"children":[{"name":"b:5","value":5},{"name":"A:6","value":6}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_fFwSfMeTSDjB = {"areas":{},"type":""}
+	let action_PyMMJQICBYyY = {"areas":{},"type":""}
 ;
     
-    goecharts_fFwSfMeTSDjB.setOption(option_fFwSfMeTSDjB);
- 	goecharts_fFwSfMeTSDjB.dispatchAction(action_fFwSfMeTSDjB);
+    goecharts_PyMMJQICBYyY.setOption(option_PyMMJQICBYyY);
+ 	goecharts_PyMMJQICBYyY.dispatchAction(action_PyMMJQICBYyY);
 </script>
 
 
