--- a/huffman_lower_shifted_tree.html
+++ b/huffman_lower_shifted_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="oMQpLBLPhFmm" style="width:900px;height:500px;"></div>
+    <div class="item" id="FXyveIfMAyRE" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_oMQpLBLPhFmm = echarts.init(document.getElementById('oMQpLBLPhFmm'), "white");
-    let option_oMQpLBLPhFmm = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"a:5","value":5},{"name":"6","value":6,"children":[{"name":"r:2","value":2},{"name":"4","value":4,"children":[{"name":"b:2","value":2},{"name":"2","value":2,"children":[{"name":"c:1","value":1},{"name":"d:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_FXyveIfMAyRE = echarts.init(document.getElementById('FXyveIfMAyRE'), "white");
+    let option_FXyveIfMAyRE = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"a:5","value":5},{"name":"6","value":6,"children":[{"name":"r:2","value":2},{"name":"4","value":4,"children":[{"name":"b:2","value":2},{"name":"2","value":2,"children":[{"name":"c:1","value":1},{"name":"d:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_oMQpLBLPhFmm = {"areas":{},"type":""}
+	let action_FXyveIfMAyRE = {"areas":{},"type":""}
 ;
     
-    goecharts_oMQpLBLPhFmm.setOption(option_oMQpLBLPhFmm);
- 	goecharts_oMQpLBLPhFmm.dispatchAction(action_oMQpLBLPhFmm);
+    goecharts_FXyveIfMAyRE.setOption(option_FXyveIfMAyRE);
+ 	goecharts_FXyveIfMAyRE.dispatchAction(action_FXyveIfMAyRE);
 </script>
 
 
