--- a/huffman_lower_tree.html
+++ b/huffman_lower_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="rVzakOdOmGAm" style="width:900px;height:500px;"></div>
+    <div class="item" id="WsUvyQEFJuJg" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_rVzakOdOmGAm = echarts.init(document.getElementById('rVzakOdOmGAm'), "white");
-    let option_rVzakOdOmGAm = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"a:5","value":5},{"name":"6","value":6,"children":[{"name":"r:2","value":2},{"name":"4","value":4,"children":[{"name":"b:2","value":2},{"name":"2","value":2,"children":[{"name":"c:1","value":1},{"name":"d:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_WsUvyQEFJuJg = echarts.init(document.getElementById('WsUvyQEFJuJg'), "white");
+    let option_WsUvyQEFJuJg = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"a:5","value":5},{"name":"6","value":6,"children":[{"name":"b:2","value":2},{"name":"4","value":4,"children":[{"name":"r:2","value":2},{"name":"2","value":2,"children":[{"name":"d:1","value":1},{"name":"c:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_rVzakOdOmGAm = {"areas":{},"type":""}
+	let action_WsUvyQEFJuJg = {"areas":{},"type":""}
 ;
     
-    goecharts_rVzakOdOmGAm.setOption(option_rVzakOdOmGAm);
- 	goecharts_rVzakOdOmGAm.dispatchAction(action_rVzakOdOmGAm);
+    goecharts_WsUvyQEFJuJg.setOption(option_WsUvyQEFJuJg);
+ 	goecharts_WsUvyQEFJuJg.dispatchAction(action_WsUvyQEFJuJg);
 </script>
 
 
