Update .gitignore and readme.md, and refactor Huffman tree HTML files

--- a/huffman_mixed_shifted_tree.html
+++ b/huffman_mixed_shifted_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="PUKVMIEIYUfo" style="width:900px;height:500px;"></div>
+    <div class="item" id="DbOacWKiPlTU" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_PUKVMIEIYUfo = echarts.init(document.getElementById('PUKVMIEIYUfo'), "white");
-    let option_PUKVMIEIYUfo = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":5,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"31","value":31,"children":[{"name":"12","value":12,"children":[{"name":"↓:6","value":6},{"name":"↑:6","value":6}]},{"name":"19","value":19,"children":[{"name":"a:9","value":9},{"name":"10","value":10,"children":[{"name":"4","value":4,"children":[{"name":"r:2","value":2},{"name":"2","value":2,"children":[{"name":"c:1","value":1},{"name":"d:1","value":1}]}]},{"name":"b:6","value":6}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_DbOacWKiPlTU = echarts.init(document.getElementById('DbOacWKiPlTU'), "white");
+    let option_DbOacWKiPlTU = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":5,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"31","value":31,"children":[{"name":"12","value":12,"children":[{"name":"↓:6","value":6},{"name":"b:6","value":6}]},{"name":"19","value":19,"children":[{"name":"a:9","value":9},{"name":"10","value":10,"children":[{"name":"4","value":4,"children":[{"name":"r:2","value":2},{"name":"2","value":2,"children":[{"name":"c:1","value":1},{"name":"d:1","value":1}]}]},{"name":"↑:6","value":6}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_PUKVMIEIYUfo = {"areas":{},"type":""}
+	let action_DbOacWKiPlTU = {"areas":{},"type":""}
 ;
     
-    goecharts_PUKVMIEIYUfo.setOption(option_PUKVMIEIYUfo);
- 	goecharts_PUKVMIEIYUfo.dispatchAction(action_PUKVMIEIYUfo);
+    goecharts_DbOacWKiPlTU.setOption(option_DbOacWKiPlTU);
+ 	goecharts_DbOacWKiPlTU.dispatchAction(action_DbOacWKiPlTU);
 </script>
 
 
