--- a/huffman_upper_tree.html
+++ b/huffman_upper_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="NKYhDVaiUCKc" style="width:900px;height:500px;"></div>
+    <div class="item" id="mIEkFMFzPvVT" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_NKYhDVaiUCKc = echarts.init(document.getElementById('NKYhDVaiUCKc'), "white");
-    let option_NKYhDVaiUCKc = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"A:5","value":5},{"name":"6","value":6,"children":[{"name":"R:2","value":2},{"name":"4","value":4,"children":[{"name":"B:2","value":2},{"name":"2","value":2,"children":[{"name":"C:1","value":1},{"name":"D:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_mIEkFMFzPvVT = echarts.init(document.getElementById('mIEkFMFzPvVT'), "white");
+    let option_mIEkFMFzPvVT = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"11","value":11,"children":[{"name":"A:5","value":5},{"name":"6","value":6,"children":[{"name":"R:2","value":2},{"name":"4","value":4,"children":[{"name":"B:2","value":2},{"name":"2","value":2,"children":[{"name":"C:1","value":1},{"name":"D:1","value":1}]}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_NKYhDVaiUCKc = {"areas":{},"type":""}
+	let action_mIEkFMFzPvVT = {"areas":{},"type":""}
 ;
     
-    goecharts_NKYhDVaiUCKc.setOption(option_NKYhDVaiUCKc);
- 	goecharts_NKYhDVaiUCKc.dispatchAction(action_NKYhDVaiUCKc);
+    goecharts_mIEkFMFzPvVT.setOption(option_mIEkFMFzPvVT);
+ 	goecharts_mIEkFMFzPvVT.dispatchAction(action_mIEkFMFzPvVT);
 </script>
 
 
