--- a/huffman_mixed_tree.html
+++ b/huffman_mixed_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="RNGuOPingmKU" style="width:900px;height:500px;"></div>
+    <div class="item" id="kUQUFLdWHhds" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_RNGuOPingmKU = echarts.init(document.getElementById('RNGuOPingmKU'), "white");
-    let option_RNGuOPingmKU = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":5,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"19","value":19,"children":[{"name":"8","value":8,"children":[{"name":"a:3","value":3},{"name":"5","value":5,"children":[{"name":"2","value":2,"children":[{"name":"D:1","value":1},{"name":"B:1","value":1}]},{"name":"3","value":3,"children":[{"name":"R:1","value":1},{"name":"2","value":2,"children":[{"name":"C:1","value":1},{"name":"r:1","value":1}]}]}]}]},{"name":"11","value":11,"children":[{"name":"b:5","value":5},{"name":"A:6","value":6}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_kUQUFLdWHhds = echarts.init(document.getElementById('kUQUFLdWHhds'), "white");
+    let option_kUQUFLdWHhds = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":5,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"19","value":19,"children":[{"name":"8","value":8,"children":[{"name":"a:3","value":3},{"name":"5","value":5,"children":[{"name":"2","value":2,"children":[{"name":"r:1","value":1},{"name":"D:1","value":1}]},{"name":"3","value":3,"children":[{"name":"B:1","value":1},{"name":"2","value":2,"children":[{"name":"R:1","value":1},{"name":"C:1","value":1}]}]}]}]},{"name":"11","value":11,"children":[{"name":"b:5","value":5},{"name":"A:6","value":6}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_RNGuOPingmKU = {"areas":{},"type":""}
+	let action_kUQUFLdWHhds = {"areas":{},"type":""}
 ;
     
-    goecharts_RNGuOPingmKU.setOption(option_RNGuOPingmKU);
- 	goecharts_RNGuOPingmKU.dispatchAction(action_RNGuOPingmKU);
+    goecharts_kUQUFLdWHhds.setOption(option_kUQUFLdWHhds);
+ 	goecharts_kUQUFLdWHhds.dispatchAction(action_kUQUFLdWHhds);
 </script>
 
 
