--- a/huffman_upper_shifted_tree.html
+++ b/huffman_upper_shifted_tree.html
@@ -13,20 +13,20 @@
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> 
 <div class="container">
-    <div class="item" id="hFuKCVrdHhHn" style="width:900px;height:500px;"></div>
+    <div class="item" id="pHkdZavIFmME" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_hFuKCVrdHhHn = echarts.init(document.getElementById('hFuKCVrdHhHn'), "white");
-    let option_hFuKCVrdHhHn = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"12","value":12,"children":[{"name":"a:5","value":5},{"name":"7","value":7,"children":[{"name":"3","value":3,"children":[{"name":"d:1","value":1},{"name":"2","value":2,"children":[{"name":"↑:1","value":1},{"name":"c:1","value":1}]}]},{"name":"4","value":4,"children":[{"name":"r:2","value":2},{"name":"b:2","value":2}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
+    let goecharts_pHkdZavIFmME = echarts.init(document.getElementById('pHkdZavIFmME'), "white");
+    let option_pHkdZavIFmME = {"animation":true,"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":true,"type":""},"series":[{"name":"tree","type":"tree","smooth":false,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"initialTreeDepth":4,"leaves":null,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"12","value":12,"children":[{"name":"a:5","value":5},{"name":"7","value":7,"children":[{"name":"3","value":3,"children":[{"name":"d:1","value":1},{"name":"2","value":2,"children":[{"name":"↑:1","value":1},{"name":"c:1","value":1}]}]},{"name":"4","value":4,"children":[{"name":"r:2","value":2},{"name":"b:2","value":2}]}]}]}]}],"title":{"text":"Huffman Tree"},"tooltip":{"show":false}}
 ;
     
-	let action_hFuKCVrdHhHn = {"areas":{},"type":""}
+	let action_pHkdZavIFmME = {"areas":{},"type":""}
 ;
     
-    goecharts_hFuKCVrdHhHn.setOption(option_hFuKCVrdHhHn);
- 	goecharts_hFuKCVrdHhHn.dispatchAction(action_hFuKCVrdHhHn);
+    goecharts_pHkdZavIFmME.setOption(option_pHkdZavIFmME);
+ 	goecharts_pHkdZavIFmME.dispatchAction(action_pHkdZavIFmME);
 </script>
 
 
